// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormSelect should match snapshot with props 1`] = `
<div
  class="select__container"
>
  <resize-observer-stub />
   
  <div
    class="v-select form-select text-base vs--single vs--searchable"
    dir="auto"
  >
     
    <div
      aria-expanded="false"
      aria-label="Search for option"
      aria-owns="vs2__listbox"
      class="vs__dropdown-toggle"
      id="vs2__combobox"
      role="combobox"
    >
      <div
        class="vs__selected-options"
      >
         
        <input
          aria-autocomplete="list"
          aria-controls="vs2__listbox"
          aria-labelledby="vs2__combobox"
          autocomplete="off"
          class="vs__search"
          id="select-id-"
          placeholder="Some Value"
          type="search"
        />
      </div>
       
      <div
        class="vs__actions"
      >
        <button
          aria-label="Clear Selected"
          class="vs__clear"
          style="display: none;"
          title="Clear Selected"
          type="button"
        >
          <ccu-icon
            alt="actions.cancel"
            class="mx-1 opacity-50"
            size="medium"
            type="cancel"
          />
        </button>
         
        <font-awesome-icon
          class="mx-1 text-crisiscleanup-dark-400 vs__open-indicator"
          icon="sort"
          role="presentation"
          size="sm"
        />
         
        <div
          class="vs__spinner"
          style="display: none;"
        >
          Loading...
        </div>
      </div>
    </div>
     
    <transition-stub
      name="vs__fade"
    >
      <ul
        id="vs2__listbox"
        role="listbox"
        style="display: none; visibility: hidden;"
      />
    </transition-stub>
     
  </div>
   
  <!---->
</div>
`;

exports[`FormSelect should render correctly and match snapshot 1`] = `
<div
  class="select__container"
>
  <resize-observer-stub />
   
  <div
    class="v-select form-select text-base vs--single vs--searchable"
    dir="auto"
  >
     
    <div
      aria-expanded="false"
      aria-label="Search for option"
      aria-owns="vs1__listbox"
      class="vs__dropdown-toggle"
      id="vs1__combobox"
      role="combobox"
    >
      <div
        class="vs__selected-options"
      >
         
        <input
          aria-autocomplete="list"
          aria-controls="vs1__listbox"
          aria-labelledby="vs1__combobox"
          autocomplete="off"
          class="vs__search"
          id="select-id-"
          placeholder="Some Value"
          type="search"
        />
      </div>
       
      <div
        class="vs__actions"
      >
        <button
          aria-label="Clear Selected"
          class="vs__clear"
          style="display: none;"
          title="Clear Selected"
          type="button"
        >
          <ccu-icon
            alt="actions.cancel"
            class="mx-1 opacity-50"
            size="medium"
            type="cancel"
          />
        </button>
         
        <font-awesome-icon
          class="mx-1 text-crisiscleanup-dark-400 vs__open-indicator"
          icon="sort"
          role="presentation"
          size="sm"
        />
         
        <div
          class="vs__spinner"
          style="display: none;"
        >
          Loading...
        </div>
      </div>
    </div>
     
    <transition-stub
      name="vs__fade"
    >
      <ul
        id="vs1__listbox"
        role="listbox"
        style="display: none; visibility: hidden;"
      />
    </transition-stub>
     
  </div>
   
  <!---->
</div>
`;
